Wed Nov 24 15:10:05 1999 Geoff Hutchison  <ghutchis@wso.williams.edu>

	* installdir/htdig.conf: Add bad_extensions to make it more obvious to 
	users how to exclude certain document types.

Tue Nov 23 19:29:37 CST 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htnotify/htnotify.cc(send_notification): apply Jason Haar's fix
	to quote the sender name "ht://Dig Notification Service".

Tue Nov 23 19:46:00 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	* conf.tab.cc.h conf.l.cc conf.tab.cc
	Added files pre-generated from conf.y, conf.l

Sun Nov 21 18:26:21 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	*htdig/Document.cc: "max_doc_size" supports new 
	configuration and is url-depended now.

Sun Nov 21 17:06:50 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	* New config parser commited. htlib/(Makefile.am,Makefile.in),
	htlib/Configuration.cc, htlib/Configuration.h
	htlib/(conf.y, conf.l) added.

Fri Nov 12 14:17:37 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/cgi.cc(init): Fix bug in reading long queries via POST
	method (PR#668).

Wed Nov 10 15:34:04 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(setVariables & createURL),
	htsearch/htsearch.cc(main), htdoc/hts_templates.html: handle keywords
	input parameter like others, and make it propagate to followups.

Wed Nov 10 15:16:57 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc: Fix PR#688, where htdig goes into an infinite
	loop if an entry in local_urls (or local_user_urls) is missing a '='
	(or a ',').

	* htcommon/defaults.cc: removed vestigial references to MAX_MATCHES
	template variables in search_results_{header,footer}.
	* htdoc/attrs.html, cf_by{name,prog}.html: reran cf_generate.pl

	* htdoc/hts_form.html: add disclaimer about keywords parameter not
	being limited to meta keywords.

	* htdoc/meta.html: add description of "keywords" meta tag property.
	add links to keywords_factor & meta_description_factor attributes.
