@@ -1,3 +1,8 @@
+Fri Nov 26 15:53:02 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htlib/String.cc(write): added Alexis Mikhailov's fix to bump up
+	pointer after writing a block.
+
 Wed Nov 24 15:10:05 1999 Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* installdir/htdig.conf: Add bad_extensions to make it more obvious to 
